Fix: align to right the share links on archived program

--- a/src/app/pages/programas/programas.scss
+++ b/src/app/pages/programas/programas.scss
@@ -11,12 +11,34 @@
 
     .program-preview {
 
-        .program-preview--box {
+        &--box {
             position: relative;
             background-color: #f1f1f1;
         }
 
-        .program-preview--banner {
+        &--box--content-wrapper {
+            padding: 48px;
+            position: relative;
+            
+        }
+        &--archived {
+            .program-preview--box--content-wrapper {
+                text-align: right;
+                padding: 10px;
+
+                @media screen and (max-width: $screen-xs) {
+                    text-align: center;
+                    padding-top: 50px;
+                }
+            }
+
+            .program-preview--share {
+                margin-bottom: 0;
+            }
+        }
+
+
+        &--banner {
             width: 100%;
             height: 400px;
 
@@ -35,7 +57,7 @@
             }
         }
 
-        .program-preview--icon {
+        &--icon {
             $icon-size: 80px;
             $icon-scale: 0.7;
             position: absolute;
@@ -57,19 +79,14 @@
             }
         }
 
-        .program-preview--box--content-wrapper {
-            padding: 48px;
-            position: relative;
-        }
-
-        .program-preview--abstract {
+        &--abstract {
             h2 {
                 margin-top: 22px; // parent.margin + this.margin = 48 + 22 = 72px;
                 margin-bottom: 32px;
             }
         }
 
-        .program-preview--abstract-details {
+        &--abstract-details {
             p {
                 color: #484848;
                 font-size: 14px;
@@ -78,7 +95,7 @@
             }
         }
 
-        .program-preview--share {
+        &--share {
             margin-bottom: 20px;
             position: relative;
             
@@ -110,8 +127,8 @@
             }
         }
 
-        .program-preview--share-label,
-        .program-preview--share-directive {
+        &--share-label,
+        &--share-directive {
             display: inline-block;
             vertical-align: middle;
         }
@@ -262,7 +279,7 @@
         h3 {
             font-weight: bold;
         }
-        
+
         .sub-section-odd {background-color: #f1f1f1; }
         .sub-section-even {background-color: #ffffff; }
 
